views/ipad_portrait.sass
@import "layout"

body
  font-size: 100%
  width: 768px
  margin: 0 auto
  background-color: #FFF

header
  display: block
  background: black

h1
  font-size: 180%
  padding: 0.8em 0
  margin: 0
  text-align: center
  background: rgba(0,0,0,.2) -webkit-gradient(linear, 0% 0%, 0% 100%, from(#E2E2E2), to(#A1A1A1), color-stop(.49,#A1A1A1),color-stop(.5,#9C9C9C))
  color: white
  -webkit-border-top-left-radius: 8px
  -webkit-border-top-right-radius: 8px
  -webkit-box-shadow: rgba(255,255,255,.2) 0 1px 0
  text-shadow: rgba(0,0,0,.6) 0 -1px 0
  border-top: 1px solid rgba(255,255,255,.6)

#page_heading
  width: 768px
  border-top: 1px solid #666
  border-bottom: 1px solid #FFF
  background-color: silver
  height: 41px

  nav
    display: block

  h2
    text-align: center
    font-size: 140%
    padding: 0.4em 0
    margin: 0
    
#toolbar
  width: 768px
  height: 60px
  background-color: black
  color: #FFF
  position: absolute
  bottom: 0
  margin: 0 auto
  text-align: center
  font-weight: bold
  
  .tool_text
    margin: 1em 0 0 0

#content
  position: relative
  z-index: 1
  width: 100%
  height: 1024px
  overflow: hidden

#scroller
  float: left
  width: 100%
  padding: 0
  background-color: #FFF

  .column1, .column2, .column3
    position: relative
    display: inline
    float: left
    border: 1px solid white
    
    #item1, #item3, #item5
      width: 340px
      margin-left: 33px
      padding: 0 13px
      left: 0
      
    #item2, #item4, #item6
      position: absolute
      margin-left: 386px
      width: 340px
      padding: 0 13px
      top: 0
      left: 0

